# AINovelStudio

./: .gitignore  CLAUDE.md  README.md
backend/: .env.example  pyproject.toml
backend/app/: config.py  database.py  logging_config.py  main.py
backend/app/ai/: client.py  prompt_registry.py  prompts.py  runtime.py
backend/app/api/: ai.py  ai_assistant.py  analysis.py  author_voice.py  chapter_scores.py  chapter_style_checks.py  chapter_translation.py  chapter_versions.py  chapters.py  characters.py  export.py  health.py  items.py  ladders.py  outline.py  platforms.py  plot_threads.py  projects.py  prompts.py  settings.py  state_events.py  stats.py  tasks.py  (+3 more)
backend/tests/: conftest.py  test_ai_assistant.py  test_ai_task_manager.py  test_analysis.py  test_author_voice.py  test_auto_index.py  test_beats_alignment.py  test_chapter_beats.py  test_chapter_scores.py  test_chapter_style_checks.py  test_chapter_translation.py  test_chapter_versions.py  test_chapters.py  test_characters.py  test_consistency_issues.py  test_export.py  test_export_docx.py  test_export_epub.py  test_export_metadata.py  test_export_txt.py  test_ladders.py  test_mcp_hooks.py  test_mcp_translation_tools.py  test_novel_import.py  test_novel_split.py  test_outline.py  test_platforms.py  test_plot_threads.py  test_preview_prompt.py  test_projects.py  test_prompts.py  test_settings.py  test_state_events.py  test_style_signals.py  test_tasks.py  test_thread_binding.py  test_translate_blocking_guard.py  test_translation_consistency.py  test_translation_glossary.py  test_voice_profile_injection.py  (+1 more)
(+211 files in other folders)
